@@ -280,6 +280,7 @@ Release 3.0.0
 * Bug Fixing 3416991 [ERDesignerNG] behaviour (de)selecting objects in diagram
 * Bug Fixing 3414627 [ERDesignerNG] SubjectArea issues
 * Bug Fixing 3420950 [ERDesignerNG] DomainEditor: comments not stored
+* Bug Fixing 3420937 [ERDesignerNG] PostgreSQL: comments of domains not RevEnged
 * Working on support for Spatial Datatypes & Fulltext indexes
 * Added support for model validation & quick fixes
 * Added support for anaglyphic 3d mode
